--- a/server/package.json
+++ b/server/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "hour-management-server",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "node --watch src/index.js",
-    "start": "node src/index.js",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.15.1",
-    "cors": "^2.8.5",
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
-    "prisma": "^5.15.1"
-  }
+    "name":  "hour-management-server",
+    "private":  true,
+    "version":  "0.0.1",
+    "type":  "module",
+    "scripts":  {
+                    "dev":  "node --watch src/index.js",
+                    "start":  "node src/index.js",
+                    "prisma:migrate":  "node -e \"require('fs').closeSync(require('fs').openSync('dev.db','a'))\" && prisma migrate dev",
+                    "prisma:studio":  "prisma studio"
+                },
+    "dependencies":  {
+                         "@prisma/client":  "^7.3.0",
+                         "@prisma/adapter-libsql":  "^7.3.0",
+                         "@libsql/client":  "^0.9.0",
+                         "express":  "^4.19.2",
+                         "dotenv":  "^16.4.5",
+                         "cors":  "^2.8.5"
+                     },
+    "devDependencies":  {
+                            "prisma":  "^7.3.0"
+                        }
 }
