--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint src --max-warnings=0"
+    "lint": "eslint src --max-warnings=0",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
     "@eslint/js": "^8.57.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -22,7 +26,9 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.3.0",
-    "vite": "^5.2.0"
+    "jsdom": "^24.1.3",
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
   }
 }
 
