--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
                     "dev":  "node --watch src/index.js",
                     "start":  "node src/index.js",
                     "prisma:migrate":  "node -e \"require('fs').closeSync(require('fs').openSync('dev.db','a'))\" && prisma migrate dev",
-                    "prisma:studio":  "prisma studio"
+                    "prisma:studio":  "prisma studio",
+                    "test":  "vitest"
                 },
     "dependencies":  {
                          "@prisma/client":  "^7.3.0",
@@ -18,6 +19,8 @@
                          "cors":  "^2.8.5"
                      },
     "devDependencies":  {
-                            "prisma":  "^7.3.0"
+                            "prisma":  "^7.3.0",
+                            "supertest":  "^7.1.1",
+                            "vitest":  "^1.6.0"
                         }
 }
