feat: update project structure and dependencies for improved time tracking
- Bump version to 0.1.2 and update package.json with new scripts for Electron development.
- Add dependencies for CORS, dotenv, express, and sql.js.
- Modify server environment variables in .env.example for better configuration.
- Update server package.json version and dependencies, removing Prisma and related files.
- Refactor database handling to use sql.js instead of Prisma, including new db.js for database operations.
- Implement new API endpoints in app.js for clock event management using sql.js.
- Create Electron main process and preload scripts for IPC communication.
- Add splash screen for better user experience during app startup.
- Introduce client environment files for API base URL configuration.
- Add README for Electron assets and instructions for app icon placement.

--- a/package.json
+++ b/package.json
@@ -1,18 +1,66 @@
 {
   "name": "hour-management",
   "private": true,
+  "version": "0.1.2",
+  "description": "Local-first time tracking with a weekly dashboard and manual adjustments.",
+  "author": "Hour Management",
+  "main": "electron/main.cjs",
   "workspaces": [
     "client",
     "server"
   ],
   "scripts": {
     "dev": "concurrently \"npm:dev --workspace client\" \"npm:dev --workspace server\"",
+    "desktop:dev": "concurrently \"npm:dev --workspace client\" \"npm:dev --workspace server\" \"npm:electron:dev\"",
+    "electron:dev": "wait-on http://localhost:5173 && wait-on http://127.0.0.1:3001/api/clock-status && cross-env ELECTRON_START_URL=http://localhost:5173 electron electron/main.cjs",
     "build": "npm run build --workspace client",
+    "build:electron-client": "npm run build --workspace client -- --mode electron",
+    "electron:build": "npm run build:electron-client && electron-builder",
     "lint": "npm run lint --workspace client",
     "format": "prettier --write ."
   },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "sql.js": "^1.10.3"
+  },
+  "build": {
+    "appId": "com.hourmanagement.app",
+    "productName": "Hour Management",
+    "artifactName": "HourManagement-Setup-${version}.${ext}",
+    "copyright": "Copyright © 2026",
+    "directories": {
+      "output": "dist-electron"
+    },
+    "files": [
+      "electron/**",
+      "client/dist/**",
+      "server/**",
+      "node_modules/sql.js/**",
+      "package.json"
+    ],
+    "asar": true,
+    "asarUnpack": [
+      "server/**",
+      "node_modules/sql.js/**"
+    ],
+    "win": {
+      "target": "nsis",
+      "publisherName": "Hour Management"
+    },
+    "nsis": {
+      "oneClick": false,
+      "perMachine": false,
+      "allowToChangeInstallationDirectory": true
+    }
+  },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "prettier": "^3.2.5"
+    "cross-env": "^7.0.3",
+    "electron": "^30.0.0",
+    "electron-builder": "^24.13.3",
+    "prettier": "^3.2.5",
+    "wait-on": "^7.2.0"
   }
 }
