--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 
 # client
 client/dist
+client/.env
 
 # server
 server/node_modules
@@ -13,3 +14,6 @@ server/.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# electron
+dist-electron
